add finished project

--- a/product_list/index.html
+++ b/product_list/index.html
@@ -15,16 +15,16 @@
         <img src="assets/images/product-list.jpg" alt="product list icon" class="logo-icon">
     </div>
 </header>
-<div class="products">
+<div class="shop js-shop">
     <div class="container">
-        <div class="row products__wrapper">
+        <div class="row shop__wrapper">
             <div class="col-xs-7-12">
                 <h1>Product List</h1>
-                <ul class="products__list js-product-list">
+                <ul class="shop-products__list js-product-list">
 
                 </ul>
             </div>
-            <div class="col-xs-5-12 products__cart cart">
+            <div class="col-xs-5-12 shop-products__cart cart">
                 <h2 class="cart__title">Cart (<span class="js-counter-cart">0</span>)</h2>
                 <ul class="cart__list js-cart-list"></ul>
                 <div class="cart__total">
